# DataloggerIMU

./: CMakeLists.txt  DataloggerIMU.c  README.md
ArquivoDados/: PlotaDados.py  mpu6050.csv
